k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: audito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: yashhanamghar/audito-auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: audito
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
  type: ClusterIP
