k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: audito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: backend-config
        - secretRef:
            name: backend-secret
        image: yashhanamghar/audito-backend:latest
        imagePullPolicy: Never
        name: backend
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /data/storage
          name: shared-storage-volume
      volumes:
      - name: shared-storage-volume
        persistentVolumeClaim:
          claimName: audito-shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: audito
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: backend
  type: ClusterIP
